Name:                   shadow-box-model
Version:                0.0.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.ShadowBox
                        Data.ShadowBox.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5

                      , bytestring >= 0.10.6.0
                        
                      , lens
                      , bitwise
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

executable shadow-box-model
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , bytestring >= 0.10.6.0
                      , shadow-box-model
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        QuickCheck
                      , base
                      , bytestring >= 0.10.6.0
                      , regex-genex
                      , tasty
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      

Source-Repository head
  Type:                 git
--  Location:             
