Name:                   shadow-box-model
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               2D Bit array, with binary image collission detection
Description:            For discretized 2d collision detection, a binary array is a nice world model.
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.ShadowBox
                        Data.ShadowBox.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , bitwise
                        


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        QuickCheck
                      , base
                      , bitwise
                      , bytestring >= 0.10.6.0
                      , regex-genex
                      , tasty
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      

Source-Repository head
  Type:                 git
--  Location:             
